add classes and email link, and background color to styles.css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="/css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>McJakes Cupcakes!</title>
   </head>
   <body>
     <h1>McJakes Cupcakes!</h1>
     <h2>We make no mistakes with our cupcakes!</h2>
-    <h2>Free cupcake on your birthdake!</h2>
+    <h2 class="birthdake">Free cupcake on your birthdake!</h2>
     <img src="img/cupcakes.jpg">
-    <p>
+    <p class="important">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p class="birthdake">
+      Don't forget the free cupcake on your bithdake!
+    </p>
+    <p>
+      E-mail us <a href="mailto:cupcakes@nothing.com">click here!</a>
     </p>
   </body>
 </html>
